--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@ window.addEventListener("scroll", reveal);
       <div class="row pt-2 mx-n2">
 
           <!-- Product 1 -- Redmi note 10s -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 border border-primary" >
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4" >
             <div id="hov" class="card product-card" >
               <div class="product-card-actions d-flex align-items-center">
-              </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
+              </div><a class="card-img-top d-block overflow-hidden border border-primary" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1" style="text-decoration:none ;">6 GB RAM, 64 GB Storage</a>
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3cIPHzj" style="color:teal;">Redmi Note 10S</a></h3>
                 <div class="d-flex justify-content-between">
@@ -874,7 +874,7 @@ labels:{
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3P5LaEP" style="color:TEAL ;">Redmi 10</a></h3>
                 <div class="d-flex justify-content-between">
             
-                  <div class="star-rating reveal">#<b style="color:red">8</b> Top10tech's rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half "></i><i class="bi bi-star"></i>
+                  <div class="star-rating reveal">#<b style="color:red">8</b> Top10tech's rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i><i class="bi bi-star "></i><i class="bi bi-star"></i>
                   </div>
                 </div>
               </div>
@@ -922,7 +922,7 @@ labels:{
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration: none;">6 GB RAM, 128 GB storage </a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3cMbPsK" style="color:TEAL ;">OPPO F19</a></h3>
                 <div class="d-flex justify-content-between">
-               <div class="reveal">#<b style="color:red">9</b> Top10tech rating  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half "></i><i class="bi bi-star"></i>   </div>
+               <div class="reveal">#<b style="color:red">9</b> Top10tech rating  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i><i class="bi bi-star "></i><i class="bi bi-star"></i>   </div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
@@ -967,7 +967,7 @@ labels:{
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">4 GB RAM, 128 GB Storage</a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3JuIe3v" style="color:TEAL;">Narzo 50 A</a></h3>
                 <div class="d-flex justify-content-between">
-<div>#<b class="reveal" style="color:red">10</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i><i class="bi bi-star"></i> </div>
+<div>#<b class="reveal" style="color:red">10</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i><i class="bi bi-star"></i><i class="bi bi-star"></i> </div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
