--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ window.addEventListener("scroll", reveal);
 <span class="bi bi-sd-card"> Storage- 64 gb or 128 gb</span><br><br>
 <span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) (Full charging &nbsp;&nbsp;&nbsp; time- 1.09h)  </span><br>
 <div style="padding:10px;width:"100%";height:"240px;align-items:center">
-<div class="chart3" style="height:200px;width:200px">
+<div class="chart3" style="height:200px;width:200px;display:none">
   <canvas id="myChart3" style="height:200px;width:200px"></canvas>
 </div>
 </div>
@@ -526,7 +526,7 @@ window.addEventListener("scroll", reveal);
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div id="hov"class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
-              </div><a class="card-img-top d-block overflow-hidden" ><img class=""style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
+              </div><a class="card-img-top d-block overflow-hidden border border-primary border-bottom-0" ><img class=""style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">6 GB RAM, 128 GB Storage</a>
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3vsHOEJ" style="color:TEAL ;">Oppo A74 5G</a></h3>
                 <div class="d-flex justify-content-between">
