--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@ window.addEventListener("scroll", reveal);
     config3
   );
 </script>
+<iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=c6fbb47bd12668b363718ac8a6cce8b5&show_border=true&link_opens_in_new_window=true"></iframe>
 
 
              <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto"><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" style="width:400px;object-fit:contain;height:auto">
