--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,14 @@ labels:{
 
 
 <!-- Card -->
-
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
 
 <!-- <main class="container py-5">
   <h2>Other similar categories</h2>
