--- a/index.html
+++ b/index.html
@@ -1378,19 +1378,22 @@ labels:{
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <div class="container text-center">
-  <div class="row g-2">
-    <div class="col-6">
-      <div class="p-3 border bg-dark">Custom column padding</div>
+<div class="container text-center">
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col-6">
-      <div class="p-3 border bg-light">Custom column padding</div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col-6">
-      <div class="p-3 border bg-dark">Custom column padding</div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col-6">
-      <div class="p-3 border bg-light">Custom column padding</div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
+    </div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
   </div>
 </div>
