--- a/index.html
+++ b/index.html
@@ -1397,6 +1397,18 @@ labels:{
     </div>
   </div>
 </div>
+    
+    
+    <div class="container overflow-hidden text-center">
+  <div class="row gx-5">
+    <div class="col">
+     <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+    <div class="col">
+      <div class="p-3 border bg-light">Custom column padding</div>
+    </div>
+  </div>
+</div>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
