--- a/index.html
+++ b/index.html
@@ -1380,10 +1380,10 @@ labels:{
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 <div class="container text-center">
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <div class="col">
+    <div class="col" style="width:70%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col"style="width:30%" >
       <div class="p-3 border bg-light">Row column</div>
     </div>
     <div class="col">
