--- a/index.html
+++ b/index.html
@@ -1391,10 +1391,10 @@ labels:{
     <div class="col" style="width:100%" >
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
   </div>
