--- a/index.html
+++ b/index.html
@@ -1386,10 +1386,11 @@ labels:{
 <div class="container text-center">
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
     <div class="col" style="width:100%">
-      <div class="p-3 border bg-light">Row column</div>
+      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
     </div>
     <div class="col" style="width:100%" >
-      <div class="p-3 border bg-light">Row column</div>
+      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br>
+      <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
     </div>
     <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
@@ -1417,10 +1418,10 @@ labels:{
     <div class="col" style="width:100%" >
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
   </div>
@@ -1444,10 +1445,10 @@ labels:{
     <div class="col" style="width:100%" >
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
-    <div class="col">
+    <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
   </div>
