--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ labels:{
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-<div class="container text-center">
+<div class="container text">
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
     <div class="col" style="width:100%">
       <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
