--- a/index.html
+++ b/index.html
@@ -1389,17 +1389,17 @@ labels:{
       <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
     </div>
     <div class="col" style="width:100%" >
-      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br>
-      <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
+      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
     </div>
     <div class="col" style="width:50%">
-      <div class="p-3 border bg-light">Row column</div>
+      <div class="p-3 border bg-light"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-fill"></i>
+</div>
     </div>
     <div class="col" style="width:50%">
       <div class="p-3 border bg-light">Row column</div>
     </div>
   </div>
-</div>
+</div><br>
     
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
