--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@ labels:{
 </div><br>
     
     <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>&nbsp;&nbsp;
+  </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
   
   <div class="card container-fluid" style="width: 20rem;display:inline-block">
