--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,7 @@ labels:{
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title</p>
+<span class="bi bi-cpu" style="font-size:10px"> Processor- Mediatek Helio G95 (2.05 GHz)  </span>
 <div class="container text" >
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
     <div class="col" style="width:100%;font-size:12px">
