--- a/index.html
+++ b/index.html
@@ -1384,26 +1384,12 @@ labels:{
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title</p>
 <span class="bi bi-cpu" style="font-size:10px"> Processor- Mediatek Helio G95 (2.05 GHz)  </span>
-<div class="container text" >
-  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <div class="col" style="width:100%;font-size:12px">
-      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
-    </div>
-    <div class="col" style="width:100%;font-size:10px" >
-      <div class="p-3 border bg-light"><span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span></div>
-    </div>
-    <div class="col" style="width:50%">
-      <div class="p-3 border bg-light"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-fill"></i>
-</div>
-    </div>
-    <div class="col" style="width:50%;font-size:6px">
-      <div class="p-3 border bg-light">Row column</div>
-    </div>
-  </div>
-</div><br>
+<span class="bi bi-memory" style="font-size:12px"> Processor- Mediatek Helio G95 (2.05 GHz)  </span>
+
+    
     
     <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  </div>&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
   
   <div class="card container-fluid" style="width: 20rem;display:inline-block">
