--- a/index.html
+++ b/index.html
@@ -1387,8 +1387,8 @@ labels:{
 <br>
     
     
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-
+    <a href="#" class="btn btn-primary">Check price</a>
+<a href="#" class="btn btn-success" style="left:0px">Go somewhere</a>
   </div>&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
   
