--- a/index.html
+++ b/index.html
@@ -1383,9 +1383,9 @@ labels:{
   <div class="card-body" style="position:relative">
     <h5 class="card-title">Redmi Note 10s</h5>
 <span class="bi bi-cpu" style="font-size:12px"> Processor- Mediatek Helio G95 (2.05 GHz)  </span>
-<br><br>
+<br>
 
-    <p class="card-text" style="font-size:16px">Our rating's <i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
+    <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
     
     
     <a href="#" class="btn btn-primary">Check price</a>
