--- a/index.html
+++ b/index.html
@@ -1383,13 +1383,14 @@ labels:{
   <div class="card-body" style="position:relative">
     <h5 class="card-title">Redmi Note 10s</h5>
 <span class="bi bi-cpu" style="font-size:12px"> Processor- Mediatek Helio G95 (2.05 GHz)  </span>
-<br>
+<span class="bi bi-memory"> RAM- 6 GB or 8 GB(2133 Mhz)  </span>
+<br><br>
 
     <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
     
     
-    <a href="#" class="btn btn-primary">Check price</a>
-<a href="#" class="btn btn-success" style="position:absolute;right:0px">Specifications</a>
+    <a href="#" class="btn btn-outline-primary">Check price</a>
+<a href="#" class="btn btn-outlile-success" style="position:absolute;right:0px">Specifications</a>
   </div>&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
   
