--- a/index.html
+++ b/index.html
@@ -1451,8 +1451,8 @@ labels:{
 
   
   
-  
-  <table class="table-responsive">
+  <div class="table-responsive">
+  <table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -1481,7 +1481,7 @@ labels:{
     </tr>
   </tbody>
 </table>
-  
+</div>  
   
   
   
