--- a/index.html
+++ b/index.html
@@ -1456,27 +1456,28 @@ labels:{
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Processor</th>
+      <th scope="col">RAM size</th>
+      <th scope="col">Camera</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
+      <th scope="row">Redmi note 10s</th>
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
+      <th scope="row">Oppo A74 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
+      <th scope="row">Redmi note 11</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
       <td>@twitter</td>
     </tr>
   </tbody>
