--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@ labels:{
     
     <a href="#" class="btn btn-outline-primary">Check price</a>
 <a href="#" class="btn btn-outline-success" style="position:absolute;right:0px">Specifications</a></div>
-  </div>&nbsp;&nbsp
+  </div>
 </div>
   
   <div class="card container-fluid" style="width: 20rem;display:inline-block">
