--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@ labels:{
     
     
     <a href="#" class="btn btn-outline-primary">Check price</a>
-<a href="#" class="btn btn-outline-success" style="position:relative;right:0px">Specifications</a></div>
+<a href="#" class="btn btn-outline-success" style="position:absolute;right:0px">Specifications</a></div>
   </div>
 </div>
   
