--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@ labels:{
     <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
     
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:0px">Check price</a>
-<a href="#" class="btn btn-outline-success" style="position:absolute;right:0px">Specifications</a></div>
+<a href="#" class="btn btn-outline-success" style="position:absolute;right:0px;left:50%">Specifications</a></div>
   </div>
 </div>
   
