--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ labels:{
                 </div>
               </div>
               <div class="card-body card-body-hidden">
-                <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3BRqFIN" style="text-decoration:none ; color:white ">View price on Amazon</a></button>
+                <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3BRqFIN" style="text-decoration:none ; color:white ">View prices on Amazon</a></button>
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop4">
                   Quick view
                   </button><!-- Modal -->
