--- a/index.html
+++ b/index.html
@@ -1382,13 +1382,14 @@ labels:{
 <div class="card container-fluid" id="hov" style="width:21rem;display:inline-block;height:450px;margin:0px;padding:0px">
   
   <div class="card-body" style="position:relative;width:21rem;height:450px;margin:0px;padding:0px" >
-<div style="position:absolute;top:0px;left:5px;width:60px;height:40px;background-color:#b12703;color:white;padding:3px">20% off</div>
-<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:20px;text-align:center"> Redmi note 10s</div>
+<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
+<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
-<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB(2133 Mhz)  </span></div>
+<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span>
+<span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span></div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
