--- a/index.html
+++ b/index.html
@@ -1388,8 +1388,9 @@ labels:{
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
-<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span>
-<span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span></div>
+<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
+<span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
+<span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) </span></div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
