--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,8 @@ labels:{
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
-<span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) </span></div>
+<span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
+<span class="bi bi-cpu"><div style="position:absolute;right:0px;height:100px;width:100px;background-color:#f6f6f6"></div></span>      </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
