--- a/index.html
+++ b/index.html
@@ -1390,8 +1390,8 @@ labels:{
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
-<span class="bi bi-lightning-charge" style="font-size:12px;background-color:red"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-camera" style="font-size:12px;background-color:red;position:relative"></span><span style="position:absolute;left:12px;height:70px;width:164px;background-color:#f6f6f6;font-size:12px;margin:0px;padding:5px;overflow:hidden"> This is it </span>      </div>
+<span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
+<span class="bi bi-camera" style="font-size:12px;position:relative"></span><br><span style="position:absolute;left:12px;height:70px;width:164px;background-color:#f6f6f6;font-size:12px;margin:0px;padding:5px;overflow:hidden"><p> 64 MP(Main)</p><p> 8 MP(Ultra wide)</p><p> 2 MP(Macro lens)</p><p> 2 MP(Depth lens)</p><p> 13 MP(Front)</p></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
