--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@ labels:{
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-camera" style="font-size:12px;position:relative">Cameras :-</span><br><span style="position:absolute;left:12px;height:70px;width:164px;background-color:#f6f6f6;font-size:7px;margin:0px;padding:5px;overflow:hidden"><p> 64 MP (Main)</p><p> 8 MP (Ultra wide)</p><p> 2 MP (Macro lens)</p><p> 2 MP (Depth lens)</p><p> 13 MP (Front)</p></span>  </div>
+<span class="bi bi-camera" style="font-size:12px;position:relative">Cameras :-</span><br><span style="position:absolute;left:12px;height:70px;width:164px;background-color:#f6f6f6;font-size:7px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
