--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@ labels:{
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
 <span class="bi bi-camera" style="font-size:12px;position:relative"> Cameras :-</span><span style="position:absolute;left:72px;height:70px;width:100px;background-color:#f6f6f6;font-size:8px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
 <br><br><br><br>
-<div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
+<div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:24px;background-color:red">
 
 
     <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
