--- a/index.html
+++ b/index.html
@@ -1395,11 +1395,11 @@ labels:{
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:24px;background-color:red">
 
-
+<div style="position:absolute;background-color:green;top:54%;height:50%;width:50%;">
     <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
-    
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:7px;bottom:14px">Check price</a>
-<a href="#" class="btn btn-outline-success" style="position:absolute;right:7px;bottom:14px">Specifications</a></div>
+ </div>   
+    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
+<a href="#" class="btn btn-outline-success" style="position:absolute;right:14px;bottom:16px">Specifications</a></div>
   </div>
 </div>
   
