--- a/index.html
+++ b/index.html
@@ -1395,10 +1395,10 @@ labels:{
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:red">
 
-<div style="position:absolute;background-color:green;height:150px;width:49%;padding:6px">
+<div style="position:absolute;background-color:green;height:150px;width:49%;padding:6px;display:inline-block">
     <p class="card-text" style="font-size:14px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
-<div style="position:absolute;height:150px;width:49%;padding:6px;right:14px;background-color:blue"></div>
+<div style="position:absolute;height:150px;width:49%;padding:6px;background-color:blue;display:inline-block"></div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
 <a href="#" class="btn btn-outline-success" style="position:absolute;right:14px;bottom:16px">Specifications</a></div>
   </div>
