--- a/index.html
+++ b/index.html
@@ -1379,7 +1379,7 @@ labels:{
   
   
   
-<div class="card container-fluid" id="hov" style="width:21rem;display:block;height:450px;margin:0px;padding:0px">
+<div class="card container-fluid" id="hov" style="width:20rem;display:block;height:450px;margin:0px;padding:0px">
   
   <div class="card-body" style="position:relative;width:21rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
@@ -1393,12 +1393,12 @@ labels:{
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
 <span class="bi bi-camera" style="font-size:12px;position:relative"> Cameras :-</span><span style="position:absolute;left:72px;height:70px;width:100px;background-color:#f6f6f6;font-size:8px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
 <br><br><br><br>
-<div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:red">
+<div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
-<div style="position:absolute;background-color:green;height:150px;width:48%;padding:8px">
+<div style="position:absolute;background-color:#f6f8f6;height:150px;width:48%;padding:8px">
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
-<div style="position:absolute;height:150px;width:45%;padding:6px;background-color:blue;right:14px"></div>
+<div style="position:absolute;height:150px;width:45%;padding:6px;background-color:#f6f6f6;right:14px"></div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
 <a href="#" class="btn btn-outline-success" style="position:absolute;right:14px;bottom:16px">Specifications</a></div>
   </div>
