--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ labels:{
   
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
-<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center"> Redmi note 10s</div>
+<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
@@ -1400,7 +1400,35 @@ labels:{
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px"></div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
-<a href="#" class="btn btn-outline-success" style="position:absolute;right:14px;bottom:16px">Specifications</a></div>
+<button href="#" class="btn btn-outline-primary d-lg-none" type="button" data-bs-toggle="offcanvas2" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive2" style="position:absolute;right:14px;bottom:16px">Check price</button>
+<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel2">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel2">Responsive offcanvas</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas2" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+
+    <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
+   
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
   </div>
 </div>
   
