--- a/index.html
+++ b/index.html
@@ -1400,13 +1400,13 @@ labels:{
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px"></div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
-<button href="#" class="btn btn-outline-primary d-lg-none" type="button" data-bs-toggle="offcanvas2" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive2" style="position:absolute;right:14px;bottom:16px">Check price</button>
+<button href="#" class="btn btn-outline-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive" style="position:absolute;right:14px;bottom:16px">Check price</button>
 <div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
 
-<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel2">
+<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel2">Responsive offcanvas</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas2" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Responsive offcanvas</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
 
