--- a/index.html
+++ b/index.html
@@ -1497,6 +1497,8 @@ labels:{
       <th scope="col">Processor</th>
       <th scope="col">RAM size</th>
       <th scope="col">Camera</th>
+      <th scope="col">Specs</th>
+      <th scope="col">the</th>
     </tr>
   </thead>
   <tbody>
@@ -1505,18 +1507,21 @@ labels:{
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
+      <td>apple</td><td>ball</td>
     </tr>
     <tr>
       <th scope="row">Oppo A74 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
+      <td></td><td></td>
     </tr>
     <tr>
       <th scope="row">Redmi note 11</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
+      <td></td><td></td>
     </tr>
   </tbody>
 </table>
