--- a/index.html
+++ b/index.html
@@ -1405,13 +1405,18 @@ labels:{
 
 <div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Responsive offcanvas</h5>
+    <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Prices at different websites</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-
+<div>
+<h3 style="background-color:#f6f6f6">Price at Amazon</h3>
     <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
-   
+</div>  <br>
+<div>
+<h3>Price at Shopsy</h3>
+</div>
+ 
   </div>
 </div>
 
