--- a/index.html
+++ b/index.html
@@ -1410,9 +1410,9 @@ labels:{
   </div>
   <div class="offcanvas-body">
 <div>
-<h3 style="background-color:#f6f6f6;text-align:center">Price at Amazon</h3>
+<h3 style="background-color:#f6f6f6;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
     <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:130px"><div style="position:absolute;bottom:0px;width:100%;height:30px;background-color:black"></div></div>
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:130px"><div style="position:absolute;bottom:0px;width:100%;height:30px;background-color:teal"></div></div>
 </div>  <br>
 <div style="background-color:green">
 <h3 style="background-color:#f6f6f6;text-align:center">Price at Shopsy</h3>
