--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,10 @@ labels:{
 <div>
 <h3 style="background-color:#f6f6f6;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
     <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:130px"><div style="position:absolute;bottom:0px;width:100%;height:30px;background-color:#dddddd;padding:2px;font-size:14px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:130px;font-size:14px;padding:6px">
+<span class="bi bi-cash"> Highest price:- Rs 4000 <span class="bi bi-chevron-double-up"></span></span><br>
+<span class="bi bi-cash"> Lowest price:- Rs 2000 <span class="bi bi-chevron-double-down"></span></span><br>
+<div style="position:absolute;bottom:0px;width:100%;height:30px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 <div style="background-color:green">
 <h3 style="background-color:#f6f6f6;text-align:center">Price at Shopsy</h3>
