--- a/index.html
+++ b/index.html
@@ -1413,11 +1413,11 @@ labels:{
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:100px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;width:100%;height:143px;background-color:#f6f6f6;padding:10px;font-size:12px;text-align:center">
+<div style="position:absolute;top:0px;width:100%;height:143px;background-color:red;padding:10px;font-size:12px;text-align:center">
 <span>Payment</span>
 </div>
 
-<div style="position:absolute;bottom:35px;width:100%;height:30px;background-color:#ffffff;padding:8px;font-size:10px;text-align:left">
+<div style="position:absolute;bottom:25px;width:100%;height:36px;background-color:#ffffff;padding:8px;font-size:10px;text-align:left">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
