--- a/index.html
+++ b/index.html
@@ -1413,8 +1413,8 @@ labels:{
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:#f6f8f6;top:100px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;width:100%;height:143px;background-color:#f6f6f6;padding:10px;font-size:12px;text-align:center">
-<span>Payment</span><br><span style="text-align:left">1. Credit and Debit cards</span><br><span style="text-align:left">2. UPI </span> <br><span style="text-align:left">3. EMI</span><br><span style="text-align:left">4. Net Banking</span><br><span style="text-align:left">5. Cash on delivery</span><br><br><span style="text-align:left;font-size:6px">* It may vary depending upon location</span>
+<div style="position:absolute;top:0px;width:100%;height:143px;background-color:#f6f6f6;padding:10px">
+<span style="font-size:14px;text-align:center">Payment</span><br><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI </span> <br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:8px">* It may vary depending upon location</span>
 </div>
 
 <div style="position:absolute;bottom:25px;width:100%;height:36px;background-color:blue;padding:6px;font-size:10px;text-align:left">
