--- a/index.html
+++ b/index.html
@@ -1424,12 +1424,12 @@ labels:{
 <div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
-<div style="background-color:green;height:400px;position:relative">
+<div style="background-color:green;height:400px;position:relative;border:1px solid black">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal">Price at Shopsy</h3>
 <div style="position:absolute;top:100px;width:120px;height:240px;background-color:#f6f6f6">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:red;font-size:14px">Top10tech</div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:#f6f6f6"></div>
-<div style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:12px"><span class="bi bi-bag">Buy now</span></div>
+<div style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:12px;text-align:center;padding:8px"><span class="bi bi-bag"></span>Buy now</div>
 
 </div>
 </div>
