--- a/index.html
+++ b/index.html
@@ -1429,8 +1429,8 @@ labels:{
 <div style="position:absolute;top:100px;width:120px;height:240px;background-color:#f6f6f6;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:red;font-size:12px">Top10tech</div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:#f6f6f6"></div>
-<div style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:8px"><span class="bi bi-bag" style="font-size:18px;text-align:center"></span> Buy now</div>
 
+<button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:6px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
  
@@ -1552,6 +1552,7 @@ labels:{
   
   
 <!-- <main class="container py-5">
+<div style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:8px"><span class="bi bi-bag" style="font-size:18px;text-align:center"></span> Buy now</div>
   <h2>Other similar categories</h2>
     <div class="bd-example bd-example-placeholder-cards d-flex justify-content-around" style="display:inline-block ;">
       <div class="card" >
