--- a/index.html
+++ b/index.html
@@ -1427,10 +1427,10 @@ labels:{
 <div style="background-color:none;height:400px;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal">Price at Shopsy</h3>
 <div style="position:absolute;top:100px;width:120px;height:240px;background-color:#f6f6f6;border:1px solid #dddddd">
-<div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:red;font-size:12px">Top10tech</div>
-<div style="position:absolute;top:20px;height:180px;width:100%;background-color:#f6f6f6"></div>
+<div style="position:absolute;height:50px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:12px">Top10tech</div>
+<div style="position:absolute;top:20px;height:160px;width:100%;background-color:none"></div>
 
-<button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px"><span class="bi bi-bag"></span> Buy now</button>
+<button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
  
