--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@ labels:{
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
 <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:40px">
-<div style="display:absolute;top:120px;height:80px;width:100%;font-size:14px"><p>Redmi note 10s</p><p>INR 13999</p></div>
+<br><p style="font-size:12px">Redmi note 10s</p><p>INR 13999</p></div>
 </div>
 
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
